<resources>
  <string name="app_name">Executer</string>
  <string name="error_connection">Error Connecting to the internet</string>
  <string name="action_settings">Settings</string>
  <string name="title_activity_auth">AuthActivity</string>
  <string name="title_activity_event_page">EventPage</string>
  <string name="hello_world">Hello world!</string>

  <string name="title_activity_event">EventActivity</string>
  <string name="title_activity_event_details">EventDetails</string>
  <string name="summary">Summary</string>
  <string name="status">Status</string>
  <string name="start_time">Start time</string>
  <string name="end_time">End time</string>
  <string name="taxi_type">Taxi type</string>
  <string name="pickup_location">Pickup Location</string>
  <string name="title_activity_login">LoginActivity</string>
  <string name="title_activity_book_ride">BookRide</string>
  <string name="uber_black_details">Your own private driver, on demand.
Expect pickup in a high-end sedan within minutes.</string>
  <string name="title_activity_booked_events">BookedEvents</string>
  <string name="uber_x_details">Everyday cars for everyday use. Better, faster, and cheaper than a taxi.</string>
  <string name="uber_suv_details">For those times when you need a bit more space.
Seats up to six people in style.</string>
  <string name="drawer_opened">drawer opened</string>
  <string name="drawer_closed">drawer closed</string>
  <string name="title_activity_event_request_confirmation">EventRequestConfirmation</string>
  <string-array name="tabs">
    <item>Events</item>
    <item>Booked Events</item>
  </string-array>
  <string name="title_activity_event_booked_details">EventBookedDetails</string>
  <string name="logout">logout</string>
  <string name="pref_previously_started">seen already</string>
</resources>
